Adds support to more formats

--- a/formats.yaml
+++ b/formats.yaml
@@ -1,33 +1,56 @@
-android: "\uf17b"
-apple:   "\uf179"
-audio:   "\uf001"
-avro:    "\ue60b"
-c:       "\ue61e"
-cpp:     "\ue61d"
-css:     "\ue749"
-doc:     "\uf1c2"
-ebook:   "\ue28b"
-file:    "\uf15b"
-folder:  "\uf115"
-font:    "\uf031"
-gform:   "\uf298"
-git:     "\uf1d3"
-html:    "\uf13b"
-image:   "\uf1c5"
-js:      "\ue74e"
-json:    "\ue60b"
-less:    "\ue758"
-md:      "\uf48a"
-ppt:     "\uf1c4"
-pdf:     "\uf1c1"
-py:      "\ue606"
-r:       "\uf25d"
-rb:      "\ue21e"
-rdb:     "\ue76d"
-sh:      "\uf489"
-txt:     "\uf15c"
-video:   "\uf03d"
-xls:     "\uf1c3"
-xml:     "\ue619"
-yml:     "\uf481"
-zip:     "\uf410"
+ai:      "\ue7b4"
+android:  "\uf17b"
+apple:    "\uf179"
+audio:    "\uf001"
+avro:     "\ue60b"
+c:        "\ue61e"
+clj:      "\ue768"
+coffee:   "\uf0f4"
+conf:     "\ue615"
+cpp:      "\ue61d"
+css:      "\ue749"
+d:        "\ue7af"
+dart:     "\ue798"
+db:       "\uf1c0"
+diff:     "\uf440"
+doc:      "\uf1c2"
+ebook:    "\ue28b"
+erl:      "\ue7b1"
+file:     "\uf15b"
+folder:   "\uf115"
+font:     "\uf031"
+gform:    "\uf298"
+git:      "\uf1d3"
+go:       "\ue724"
+hs:       "\ue777"
+html:     "\uf13b"
+image:    "\uf1c5"
+java:     "\ue204"
+js:       "\ue74e"
+json:     "\ue60b"
+less:     "\ue758"
+lua:      "\ue620"
+md:       "\uf48a"
+mustache: "\ue60f"
+pdf:      "\uf1c1"
+php:      "\ue73d"
+pl:       "\ue769"
+ppt:      "\uf1c4"
+psd:      "\ue7b8"
+py:       "\ue606"
+r:        "\uf25d"
+rb:       "\ue21e"
+rdb:      "\ue76d"
+rss:      "\uf09e"
+scala:    "\ue737"
+shell:    "\uf489"
+styl:     "\ue600"
+twig:     "\ue61c"
+txt:      "\uf15c"
+video:    "\uf03d"
+vim:      "\ue62b"
+windows:  "\uf17a"
+xls:      "\uf1c3"
+xml:      "\ue619"
+yml:      "\uf481"
+zip:      "\uf410"
