Add more icons, replace some for easier viewing

--- a/files.yaml
+++ b/files.yaml
@@ -1,5 +1,5 @@
 ai:       "\ue7b4"
-android:  "\uf17b"
+android:  "\ue70e"
 apple:    "\uf179"
 audio:    "\uf001"
 avro:     "\ue60b"
@@ -20,10 +20,11 @@ file:     "\uf15b"
 font:     "\uf031"
 gform:    "\uf298"
 git:      "\uf1d3"
-go:       "\ue724"
+go:       "\ue626"
 hs:       "\ue777"
 html:     "\uf13b"
 image:    "\uf1c5"
+iml:      "\ue7b5"
 java:     "\ue204"
 js:       "\ue74e"
 json:     "\ue60b"
@@ -31,6 +32,7 @@ less:     "\ue758"
 lua:      "\ue620"
 md:       "\uf48a"
 mustache: "\ue60f"
+npmignore: "\ue71e"
 pdf:      "\uf1c1"
 php:      "\ue73d"
 pl:       "\ue769"
@@ -43,7 +45,10 @@ rdb:      "\ue76d"
 rss:      "\uf09e"
 scala:    "\ue737"
 shell:    "\uf489"
+sqlite3:  "\ue7c4"
 styl:     "\ue600"
+tex:      "\ue600"
+ts:       "\ue628"
 twig:     "\ue61c"
 txt:      "\uf15c"
 video:    "\uf03d"
