--- a/file_aliases.yaml
+++ b/file_aliases.yaml
@@ -1,4 +1,5 @@
 apk:              android
+gradle:           android
 ds_store:         apple
 localized:        apple
 mp3:              audio
@@ -17,10 +18,13 @@ gitignore_global: git
 lhs:              hs
 bmp:              image
 gif:              image
+ico:              image
 jpeg:             image
 jpg:              image
 png:              image
 svg:              image
+jar:              java
+properties:       json
 markdown:         md
 mkd:              md
 rdoc:             md
@@ -46,10 +50,13 @@ bashrc:           shell
 bash_history:     shell
 bash_profile:     shell
 sh:               shell
+fish:             shell
 zsh:              shell
 zsh-theme:        shell
 zshrc:            shell
+cls:              tex
 mp4:              video
+bat:              windows
 exe:              windows
 ini:              windows
 csv:              xls
@@ -57,5 +64,6 @@ gsheet:           xls
 xlsx:             xls
 xul:              xml
 yaml:             yml
+gz:               zip
 rar:              zip
 tar:              zip
