Add entry to files.yaml to handle .log file

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -29,6 +29,7 @@ java:     "\ue204"
 js:       "\ue74e"
 json:     "\ue60b"
 less:     "\ue758"
+log:      "\uf19e"
 lua:      "\ue620"
 md:       "\uf48a"
 mustache: "\ue60f"
