Update files.yaml, correcting a typo in log entry

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -29,7 +29,7 @@ java:     "\ue204"
 js:       "\ue74e"
 json:     "\ue60b"
 less:     "\ue758"
-log:      "\uf19e"
+log:      "\uf18d"
 lua:      "\ue620"
 md:       "\uf48a"
 mustache: "\ue60f"
