added cxx as c++ file

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -8,6 +8,7 @@ clj:      "\ue768"
 coffee:   "\uf0f4"
 conf:     "\ue615"
 cpp:      "\ue61d"
+cxx:      "\ue61d"
 css:      "\ue749"
 d:        "\ue7af"
 dart:     "\ue798"
