--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -34,6 +34,7 @@ md:       "\uf48a"
 mustache: "\ue60f"
 npmignore: "\ue71e"
 pdf:      "\uf1c1"
+pem:      "\uf43d"
 php:      "\ue73d"
 pl:       "\ue769"
 ppt:      "\uf1c4"
