--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -15,6 +15,7 @@ db:       "\uf1c0"
 diff:     "\uf440"
 doc:      "\uf1c2"
 ebook:    "\ue28b"
+epub:     "\ue28a"
 erl:      "\ue7b1"
 file:     "\uf15b"
 font:     "\uf031"
