--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -3,6 +3,7 @@ android:  "\ue70e"
 apple:    "\uf179"
 audio:    "\uf001"
 avro:     "\ue60b"
+bz2:       "\uf1c6"
 c:        "\ue61e"
 clj:      "\ue768"
 coffee:   "\uf0f4"
@@ -16,12 +17,14 @@ db:       "\uf1c0"
 diff:     "\uf440"
 doc:      "\uf1c2"
 ebook:    "\ue28b"
+epub:     "\ue28a"
 erl:      "\ue7b1"
 file:     "\uf15b"
 font:     "\uf031"
 gform:    "\uf298"
 git:      "\uf1d3"
 go:       "\ue626"
+gz:       "\uf1c6"
 hs:       "\ue777"
 html:     "\uf13b"
 image:    "\uf1c5"
@@ -35,6 +38,7 @@ md:       "\uf48a"
 mustache: "\ue60f"
 npmignore: "\ue71e"
 pdf:      "\uf1c1"
+pem:      "\uf43d"
 php:      "\ue73d"
 pl:       "\ue769"
 ppt:      "\uf1c4"
@@ -49,6 +53,7 @@ shell:    "\uf489"
 sqlite3:  "\ue7c4"
 styl:     "\ue600"
 tex:      "\ue600"
+tgz:      "\uf1c6"
 ts:       "\ue628"
 twig:     "\ue61c"
 txt:      "\uf15c"
@@ -57,5 +62,6 @@ vim:      "\ue62b"
 windows:  "\uf17a"
 xls:      "\uf1c3"
 xml:      "\ue619"
+xz:       "\uf1c6"
 yml:      "\uf481"
 zip:      "\uf410"
