Add icons for specific filenames

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -1,62 +1,63 @@
-ai:       "\ue7b4"
-android:  "\ue70e"
-apple:    "\uf179"
-audio:    "\uf001"
-avro:     "\ue60b"
-c:        "\ue61e"
-clj:      "\ue768"
-coffee:   "\uf0f4"
-conf:     "\ue615"
-cpp:      "\ue61d"
-css:      "\ue749"
-d:        "\ue7af"
-dart:     "\ue798"
-db:       "\uf1c0"
-diff:     "\uf440"
-doc:      "\uf1c2"
-ebook:    "\ue28b"
-epub:     "\ue28a"
-erl:      "\ue7b1"
-file:     "\uf15b"
-font:     "\uf031"
-gform:    "\uf298"
-git:      "\uf1d3"
-go:       "\ue626"
-hs:       "\ue777"
-html:     "\uf13b"
-image:    "\uf1c5"
-iml:      "\ue7b5"
-java:     "\ue204"
-js:       "\ue74e"
-json:     "\ue60b"
-less:     "\ue758"
-log:      "\uf18d"
-lua:      "\ue620"
-md:       "\uf48a"
-mustache: "\ue60f"
-npmignore: "\ue71e"
-pdf:      "\uf1c1"
-php:      "\ue73d"
-pl:       "\ue769"
-ppt:      "\uf1c4"
-psd:      "\ue7b8"
-py:       "\ue606"
-r:        "\uf25d"
-rb:       "\ue21e"
-rdb:      "\ue76d"
-rss:      "\uf09e"
-scala:    "\ue737"
-shell:    "\uf489"
-sqlite3:  "\ue7c4"
-styl:     "\ue600"
-tex:      "\ue600"
-ts:       "\ue628"
-twig:     "\ue61c"
-txt:      "\uf15c"
-video:    "\uf03d"
-vim:      "\ue62b"
-windows:  "\uf17a"
-xls:      "\uf1c3"
-xml:      "\ue619"
-yml:      "\uf481"
-zip:      "\uf410"
+ai:           "\ue7b4"
+android:      "\ue70e"
+apple:        "\uf179"
+audio:        "\uf001"
+avro:         "\ue60b"
+c:            "\ue61e"
+clj:          "\ue768"
+coffee:       "\uf0f4"
+conf:         "\ue615"
+cpp:          "\ue61d"
+css:          "\ue749"
+d:            "\ue7af"
+dart:         "\ue798"
+db:           "\uf1c0"
+diff:         "\uf440"
+doc:          "\uf1c2"
+ebook:        "\ue28b"
+epub:         "\ue28a"
+erl:          "\ue7b1"
+file:         "\uf15b"
+font:         "\uf031"
+gform:        "\uf298"
+git:          "\uf1d3"
+go:           "\ue626"
+gruntfile.js: "\ue74c" 
+hs:           "\ue777"
+html:         "\uf13b"
+image:        "\uf1c5"
+iml:          "\ue7b5"
+java:         "\ue204"
+js:           "\ue74e"
+json:         "\ue60b"
+less:         "\ue758"
+log:          "\uf18d"
+lua:          "\ue620"
+md:           "\uf48a"
+mustache:     "\ue60f"
+npmignore:    "\ue71e"
+pdf:          "\uf1c1"
+php:          "\ue73d"
+pl:           "\ue769"
+ppt:          "\uf1c4"
+psd:          "\ue7b8"
+py:           "\ue606"
+r:            "\uf25d"
+rb:           "\ue21e"
+rdb:          "\ue76d"
+rss:          "\uf09e"
+scala:        "\ue737"
+shell:        "\uf489"
+sqlite3:      "\ue7c4"
+styl:         "\ue600"
+tex:          "\ue600"
+ts:           "\ue628"
+twig:         "\ue61c"
+txt:          "\uf15c"
+video:        "\uf03d"
+vim:          "\ue62b"
+windows:      "\uf17a"
+xls:          "\uf1c3"
+xml:          "\ue619"
+yml:          "\uf481"
+zip:          "\uf410"
