yarn.lock isn't a ruby thing

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -59,5 +59,6 @@ vim:          "\ue62b"
 windows:      "\uf17a"
 xls:          "\uf1c3"
 xml:          "\ue619"
+yarn.lock:    "\ue718"
 yml:          "\uf481"
 zip:          "\uf410"
