--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,16 @@ script:
   - bundle exec rspec
   - rake install
   - colorls
+  - colorls -1
   - colorls -a
   - colorls -A
   - colorls -d
   - colorls -f
+  - colorls -l
+  - colorls -r
   - colorls -sd
   - colorls -sf
-  - colorls -1
-  - colorls -r
-  - colorls -l
+  - colorls -t
   - colorls README.md
   - colorls *
   - colorls | grep /
