--- a/lib/yaml/dark_colors.yaml
+++ b/lib/yaml/dark_colors.yaml
@@ -1,6 +1,6 @@
 # Main Colors
 unrecongnized_file: yellow
-recongnized_file:   green
+recognized_file:   green
 dir:                blue
 
 # Access Modes
