fix name and update colors for the light and dark scheme

--- a/lib/yaml/dark_colors.yaml
+++ b/lib/yaml/dark_colors.yaml
@@ -1,7 +1,7 @@
 # Main Colors
-unrecongnized_file: yellow
-recognized_file:    green
-dir:                blue
+unrecognized_file: yellow
+recognized_file:   green
+dir:               blue
 
 # Link
 dead_link: red
@@ -14,11 +14,13 @@ exec:      cyan
 no_access: grey
 
 # Age
-day_old:  yellow
-hour_old: green
+day_old:     yellow
+hour_old:    green
+no_modifier: white
 
 # Random
 report: white
 user:   green
 tree:   cyan
 empty:  yellow
+normal: white
