Add use case for -l with path to file

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
   - colorls -f
   - colorls -l
   - colorls -l spec/fixtures/symlinks
+  - colorls -l README.md
   - colorls -r
   - colorls -sd
   - colorls -sf
