--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -16,13 +16,14 @@ diff:         "\uf440"
 doc:          "\uf1c2"
 ebook:        "\ue28b"
 epub:         "\ue28a"
+erb:          "\ue73b"
 erl:          "\ue7b1"
 file:         "\uf15b"
 font:         "\uf031"
 gform:        "\uf298"
 git:          "\uf1d3"
 go:           "\ue626"
-gruntfile.js: "\ue74c" 
+gruntfile.js: "\ue74c"
 hs:           "\ue777"
 html:         "\uf13b"
 image:        "\uf1c5"
@@ -47,7 +48,9 @@ rb:           "\ue21e"
 rdb:          "\ue76d"
 rss:          "\uf09e"
 scala:        "\ue737"
+scss:         "\ue74b"
 shell:        "\uf489"
+slim:         "\ue73b"
 sqlite3:      "\ue7c4"
 styl:         "\ue600"
 tex:          "\ue600"
