Added env icon.

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -15,6 +15,7 @@ db:           "\uf1c0"
 diff:         "\uf440"
 doc:          "\uf1c2"
 ebook:        "\ue28b"
+env:          "\uf462"
 epub:         "\ue28a"
 erb:          "\ue73b"
 erl:          "\ue7b1"
