--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -17,7 +17,6 @@ doc:          "\uf1c2"
 ebook:        "\ue28b"
 env:          "\uf462"
 epub:         "\ue28a"
-erb:          "\ue73b"
 erl:          "\ue7b1"
 file:         "\uf15b"
 font:         "\uf031"
@@ -48,10 +47,10 @@ r:            "\uf25d"
 rb:           "\ue21e"
 rdb:          "\ue76d"
 rss:          "\uf09e"
+rubydoc:      "\ue73b"
 scala:        "\ue737"
 scss:         "\ue74b"
 shell:        "\uf489"
-slim:         "\ue73b"
 sqlite3:      "\ue7c4"
 styl:         "\ue600"
 tex:          "\ue600"
