Adds env, erb, scss, and slim icons. (#95)
* Added erb, scss, and slim icons.

* Added env icon.

* Aliased erb and slim icons to new rubydoc.

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -15,6 +15,7 @@ db:           "\uf1c0"
 diff:         "\uf440"
 doc:          "\uf1c2"
 ebook:        "\ue28b"
+env:          "\uf462"
 epub:         "\ue28a"
 erl:          "\ue7b1"
 file:         "\uf15b"
@@ -22,7 +23,7 @@ font:         "\uf031"
 gform:        "\uf298"
 git:          "\uf1d3"
 go:           "\ue626"
-gruntfile.js: "\ue74c" 
+gruntfile.js: "\ue74c"
 hs:           "\ue777"
 html:         "\uf13b"
 image:        "\uf1c5"
@@ -46,7 +47,9 @@ r:            "\uf25d"
 rb:           "\ue21e"
 rdb:          "\ue76d"
 rss:          "\uf09e"
+rubydoc:      "\ue73b"
 scala:        "\ue737"
+scss:         "\ue74b"
 shell:        "\uf489"
 sqlite3:      "\ue7c4"
 styl:         "\ue600"
