--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -3,7 +3,6 @@ gradle:           android
 ds_store:         apple
 localized:        apple
 mp3:              audio
-scss:             css
 docx:             doc
 gdoc:             doc
 mobi:             ebook
@@ -45,6 +44,8 @@ rspec:            rb
 rspec_parallel:   rb
 rspec_status:     rb
 ru:               rb
+erb:              rubydoc
+slim:             rubydoc
 bash:             shell
 bash_history:     shell
 bash_profile:     shell
