Only filter hidden files when listing a directory
* add `.hidden-file` to fixtures
* add check that `.hidden-file` is found to .travis.yml

Fixes #101.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
   - colorls -f
   - colorls -l
   - colorls -l spec/fixtures/symlinks
+  - ( cd spec/fixtures ; colorls .hidden-file ) | fgrep '.hidden-file'
   - colorls -l README.md
   - colorls -r
   - colorls -sd
