Add some icons for folders
* Folder names: .atom, .vscode, .github

--- a/lib/yaml/folders.yaml
+++ b/lib/yaml/folders.yaml
@@ -1,6 +1,9 @@
+.atom:    "\ue764"
 .git:     "\uf1d3"
+.github:  "\uf408"
 .rvm:     "\ue21e"
 .Trash:   "\uf1f8"
+.vscode:  "\ue70c"
 config:   "\ue5fc"
 folder:   "\uf115"
 hidden:   "\uf023"
