Add/Fix some file icons
* New icons:
  - React: .jsx
  - SASS: .sass

* Fixed aliases:
  - .editorconfig: It was a 'git' icon, which makes no sense
  - sass/scss: SCSS is not SASS

* New aliases:
  - Stylus: .stylus → .styl
  - Video: .avi, .mkv, .ogv, .webm → video
  - React: .tsx → .jsx

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -31,6 +31,7 @@ iml:          "\ue7b5"
 java:         "\ue204"
 js:           "\ue74e"
 json:         "\ue60b"
+jsx:          "\ue7ba"
 less:         "\ue758"
 log:          "\uf18d"
 lua:          "\ue620"
@@ -48,8 +49,8 @@ rb:           "\ue21e"
 rdb:          "\ue76d"
 rss:          "\uf09e"
 rubydoc:      "\ue73b"
+sass:         "\ue603"
 scala:        "\ue737"
-scss:         "\ue74b"
 shell:        "\uf489"
 sqlite3:      "\ue7c4"
 styl:         "\ue600"
