--- a/lib/yaml/light_colors.yaml
+++ b/lib/yaml/light_colors.yaml
@@ -18,6 +18,11 @@ day_old:     yellow
 hour_old:    green
 no_modifier: black
 
+# File Size
+file_large:  red
+file_medium: yellow
+file_small:  green
+
 # Random
 report: black
 user:   green
