Add support for sorting by mtime
* add `--sort=WORD` option, which sorts by modification "time" or not at all

* add short option `-U` to mean `--sort=none` (`ls` compatibility)

* `-t` now has the same effect as `--sort=time` which is also mentioned in the
  post install mesage

* add checks for `--sort=time` and `--sort=none` to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ script:
   - colorls --sd
   - colorls --sf
   - colorls -t
+  - colorls --sort=time
+  - colorls -U
+  - colorls --sort=none
   - colorls -h
   - colorls --gs
   - colorls spec/fixtures/symlinks
