Adds custom config coloring support for faster git-status

--- a/lib/yaml/dark_colors.yaml
+++ b/lib/yaml/dark_colors.yaml
@@ -32,7 +32,8 @@ error:  red
 normal: darkkhaki
 
 # Git
-unchanged: forestgreen
-added:     chartreuse    
-changed:   darkorange
-untracked: darkred
+addition:     chartreuse
+modification: darkkhaki
+deletion:     darkred
+untracked:    darkorange
+unchanged:    forestgreen
