--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,15 @@ AllCops:
   TargetRubyVersion: 2.1
 
 # Preferred codebase style ---------------------------------------------
+
+RSpec/DescribeClass:
+  Exclude:
+    - 'spec/yaml_spec.rb'
+
+RSpec/FilePath:
+  Exclude:
+    - 'spec/flags_spec.rb'
+
 Layout/ExtraSpacing:
   AllowForAlignment: true
 
