--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ script:
   - colorls --sort=time
   - colorls -U
   - colorls --sort=none
+  - colorls -S
+  - colorls --sort=size
   - colorls -h
   - colorls --gs
   - colorls spec/fixtures/symlinks
