add jupyter notebooks to file aliases

--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -35,6 +35,7 @@ rdoc:             md
 readme:           md
 gslides:          ppt
 pptx:             ppt
+ipynb:            py
 pyc:              py
 rdata:            r
 rds:              r
