--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -2,8 +2,11 @@ apk:              android
 gradle:           android
 ds_store:         apple
 localized:        apple
+flac:             audio
+m4a:              audio
 mp3:              audio
 ogg:              audio
+wav:              audio
 editorconfig:     conf
 scss:             css
 docx:             doc
@@ -24,7 +27,10 @@ ico:              image
 jpeg:             image
 jpg:              image
 png:              image
+pxm:              image
 svg:              image
+tiff:             image
+webp:             image
 jar:              java
 properties:       json
 tsx:              jsx
@@ -63,7 +69,9 @@ zshrc:            shell
 stylus:           styl
 cls:              tex
 avi:              video
+flv:              video
 mkv:              video
+mov:              video
 mp4:              video
 ogv:              video
 webm:             video
