--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -14,6 +14,7 @@ dart:         "\ue798"
 db:           "\uf1c0"
 diff:         "\uf440"
 doc:          "\uf1c2"
+docker:       "\uf308"
 ebook:        "\ue28b"
 env:          "\uf462"
 epub:         "\ue28a"
