Fix build failure on `rake install`
```
$ rake install
rake aborted!
Gem::LoadError: You have already activated rake 12.3.0, but your Gemfile requires rake 12.3.1. Prepending `bundle exec` to your command may solve this.d
```

* use `bundle exec rake install` instead as suggested
* generate binstubs with bundler and prepend `bin/` to `PATH`

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ rvm:
 script:
   - bundle exec rubocop
   - bundle exec rspec
-  - rake install
+  - bundle exec rake install
+  - bundle binstubs colorls
+  - PATH=$PWD/bin:$PATH
   - colorls
   - colorls -1
   - colorls -a
