changed icon for gitfolders and git related files

--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -22,7 +22,7 @@ erl:          "\ue7b1"
 file:         "\uf15b"
 font:         "\uf031"
 gform:        "\uf298"
-git:          "\uf1d3"
+git:          "\uf7a1"
 go:           "\ue626"
 gruntfile.js: "\ue74c"
 hs:           "\ue777"
