Add `--hyperlink` option
This generates `file://` links using ANSI escape sequences which opens the
given file using the default application for the file type on your system.

A terminal emulator supporting hyperlinks is required, otherwise the links
will be ignored.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ script:
   - colorls -r
   - colorls --sd
   - colorls --sf
+  - colorls --hyperlink
   - colorls -t
   - colorls --sort=time
   - colorls -U
