Add `--color` option
This option works the same as for GNU ls, although if not specified colorization
is on by default (the `auto` mode).

Using `--color` is equivalent to `--color=always`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,10 @@ script:
   - colorls README.md
   - colorls *
   - colorls | grep /
+  - colorls --color
+  - colorls --color=auto
+  - colorls --color=never
+  - colorls --color=always
 
 install:
   - gem install bundler
