Add support for special files
Like sockets, character and block devices.

--- a/lib/yaml/dark_colors.yaml
+++ b/lib/yaml/dark_colors.yaml
@@ -7,6 +7,11 @@ dir:               dodgerblue
 dead_link: red
 link:      cyan
 
+# special files
+socket:    green
+blockdev:  green
+chardev:   green
+
 # Access Modes
 write:     darkkhaki
 read:      limegreen
