--- a/lib/yaml/light_colors.yaml
+++ b/lib/yaml/light_colors.yaml
@@ -7,6 +7,11 @@ dir:               navyblue
 dead_link: red
 link:      cyan
 
+# special files
+socket:    darkgray
+blockdev:  darkgray
+chardev:   darkgray
+
 # Access Modes
 write:     red
 read:      sienna
