--- a/lib/yaml/dark_colors.yaml
+++ b/lib/yaml/dark_colors.yaml
@@ -2,6 +2,8 @@
 unrecognized_file: gold
 recognized_file:   lime
 dir:               dodgerblue
+dir_suffixes:
+  venv:            green
 
 # Link
 dead_link: red
