--- a/lib/yaml/dark_colors.yaml
+++ b/lib/yaml/dark_colors.yaml
@@ -3,7 +3,7 @@ unrecognized_file: gold
 recognized_file:   lime
 dir:               dodgerblue
 dir_suffixes:
-  venv:            royalblue
+  _venv:           royalblue
 
 # Link
 dead_link: red
