travis: Upgrade RubyGems to the latest version and install bundler 2
This fixes build failures due to Bundler 2.0 requires rubygems >= 3.0.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ rvm:
   - '2.5'
   - '2.6'
 
+before_install:
+  - gem update --system
+  - gem --version
+  - gem install bundler -v '~> 2'
+
 script:
   - bundle exec rubocop
   - bundle exec rake spec
