Remove default option for tree flag, add tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,4 +55,6 @@ script:
   - colorls --color=auto
   - colorls --color=never
   - colorls --color=always
+  - colorls --tree
+  - colorls --tree=1
 
