Disable the `Style/StderrPuts` cop
I do not want to use `warn` since these errors should not be suppressed. And
I always want to use `STDERR`, not `$stderr`.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -79,6 +79,9 @@ Style/EmptyCaseCondition:
 Style/MultilineBlockChain:
   Enabled: false
 
+Style/StderrPuts:
+  Enabled: false
+
 # Current preferred metrics --------------------------------------------
 # Better values are encouraged, but not required.
 Metrics/AbcSize:
