Audio formats added to file_aliases.yaml
+42 audio formats added to file_aliases.yaml

--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -2,11 +2,48 @@ apk:              android
 gradle:           android
 ds_store:         apple
 localized:        apple
+3gp:              audio
+aa:               audio
+aac:              audio
+aax:              audio
+act:              audio
+aiff:             audio
+amr:              audio
+ape:              audio
+au:               audio
+awb:              audio
+dct:              audio
+dss:              audio
+dvf:              audio
 flac:             audio
+gsm:              audio
+iklax:            audio
+ivs:              audio
 m4a:              audio
+m4b:              audio
+m4p:              audio
+mmf:              audio
 mp3:              audio
-ogg:              audio
+mpc:              audio
+msv:              audio
+nmf:              audio
+nsf:              audio
+ogg:              audio 
+oga:              audio 
+mogg:             audio
+opus:             audio
+ra:               audio
+rm:               audio
+raw:              audio
+sln:              audio
+tta:              audio
+voc:              audio
+vox:              audio
 wav:              audio
+wma:              audio
+wv:               audio
+webm:             audio
+8svx:             audio
 editorconfig:     conf
 scss:             css
 docx:             doc
