Fix rubocop warning, move `LineLength` into `Layout` namespace
```
.rubocop.yml: Metrics/LineLength has the wrong namespace - should be Layout
```

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,7 +42,7 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/**/*'
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 
 Metrics/ModuleLength:
