Use ASCII_8BIT for paths and directory entries
On Unix systems the encoding of file names is specified by the user via the
locale settings.

In order to avoid encoding problems simply read file names in ASCII 8 bit
encoding and try to convert to the external encoding while replacing undefined
characters.

Also, does not show an icon if the external encoding does not support it and
shows a `=` instead of a check mark for git status.

Fixes #352.

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,8 @@ script:
   - colorls --color=always
   - colorls --tree
   - colorls --tree=1
+  - LC_ALL=C colorls spec/fixtures/
+  - LC_ALL=C colorls --git spec/fixtures/
 
 deploy:
   provider: rubygems
