Enable pending cops
```
The following cops were added to RuboCop, but are not configured. Please set Enabled to either `true` or `false` in your `.rubocop.yml` file:
 - Lint/RaiseException (0.81)
 - Lint/StructNewOverride (0.81)
 - Style/HashEachMethods (0.80)
 - Style/HashTransformKeys (0.80)
 - Style/HashTransformValues (0.80)
For more information: https://docs.rubocop.org/en/latest/versioning/
```

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,12 @@ Layout/SpaceInsideHashLiteralBraces:
 Layout/ParameterAlignment:
   EnforcedStyle: with_fixed_indentation
 
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
 Style/EmptyElse:
   EnforcedStyle: empty
 
@@ -62,6 +68,15 @@ Style/ParallelAssignment:
 
 Style/DoubleNegation:
   Enabled: false
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
 
 Style/SingleLineBlockParams:
   Enabled: false
