--- a/lib/yaml/folders.yaml
+++ b/lib/yaml/folders.yaml
@@ -1,11 +1,11 @@
-.atom:    "\ue764"
-.git:     "\uf1d3"
-.github:  "\uf408"
-.rvm:     "\ue21e"
-.Trash:   "\uf1f8"
-.vscode:  "\ue70c"
-config:   "\ue5fc"
-folder:   "\uf115"
-hidden:   "\uf023"
-lib:      "\uf121"
-node_modules: "\ue718"
+.atom:    ""
+.git:     ""
+.github:  ""
+.rvm:     ""
+.Trash:   ""
+.vscode:  ""
+config:   ""
+folder:   ""
+hidden:   ""
+lib:      ""
+node_modules: ""
