Add Truffleruby head to CI (#393)
Co-authored-by: Claudio Bley <claudio.bley@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ rvm:
   - '2.5'
   - '2.6'
   - '2.7'
+  - 'truffleruby-head'
+
+jobs:
+  fast_finish: true
+  allow_failures:
+    - rvm: truffleruby-head
 
 before_install:
   - gem --version
