Add osx to build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ jobs:
     - os: windows
 
   include:
+    - os: osx
+      rvm: '2.7'
+
     - os: windows
       language: bash
       before_cache:
