Add support for executable_file color

--- a/lib/yaml/dark_colors.yaml
+++ b/lib/yaml/dark_colors.yaml
@@ -1,6 +1,7 @@
 # Main Colors
 unrecognized_file: gold
-recognized_file:   lime
+recognized_file:   yellow
+executable_file:   lime
 dir:               dodgerblue
 
 # Link
