CI: Also run on macos-latest
Make the `test/run` script compatible to the ancient Bash version on macos.

```
test/run: line 56: conditional binary operator expected
```

Also, run `set -e` only for Bash >= 4. Otherwise the shell silently exits with
a failure when a command (expectedly) fails.

fix bogus test failure with Bash 3.2 on macos

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,10 +16,12 @@ on:
 jobs:
   test:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         ruby-version: ['2.6', '2.7', '3.0']
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
