Drop support for Ruby 2.5
It reached EOL with release 2.5.9, and no longer receives patches.

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -20,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0']
+        ruby-version: ['2.6', '2.7', '3.0', '3.1']
         os: [ubuntu-latest, macos-latest]
 
     steps:
