--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -37,3 +37,26 @@ jobs:
       run: bundle exec rake
     - name: Run checks
       run: test/run
+
+  publish:
+    needs: test
+
+    runs-on: ubuntu-latest
+
+    if: success() && github.event_name == 'push'
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.1'
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Publish to RubyGems
+      run: |
+        mkdir -p $HOME/.gem
+        printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+        chmod 0600 $HOME/.gem/credentials
+        bundle exec rake publish
+      env:
+        GEM_HOST_API_KEY: "${{ secrets.RUBYGEMS_API_KEY }}"
