--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -48,6 +48,7 @@ py:           ""
 r:            ""
 rb:           ""
 rdb:          ""
+react:        "ﰆ"
 rss:          ""
 rubydoc:      ""
 sass:         ""
@@ -61,6 +62,7 @@ twig:         ""
 txt:          ""
 video:        ""
 vim:          ""
+vue:          "﵂"
 windows:      ""
 xls:          ""
 xml:          ""
