Remove `rubygems_mfa_required` setting and disable RequireMFA cop
This setting was introduced automatically by the aforementioned rubocop cop,
which makes it impossible to publish to rubygems automatically from a Github
action with an API key, since one would always need the second factor.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -113,6 +113,9 @@ Metrics/CyclomaticComplexity:
 Metrics/PerceivedComplexity:
   Max: 8
 
+Gemspec/RequireMFA:
+  Enabled: false
+
 # TODO -----------------------------------------------------------------
 
 Style/Documentation:
