--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -43,6 +43,7 @@ pdf:          ""
 php:          ""
 pl:           ""
 ppt:          ""
+prql:         ""
 psd:          ""
 py:           ""
 r:            ""
